# src/payments/payments.dto.ts
@@ -1,0 +1,4 @@
+export interface PaymentReqDTO {
+    applicationId: string
+    paymentAmount: number
+}
