# src/products/products.dto.ts
@@ -1,0 +1,12 @@
+import { TrigonometryExpressionOperator } from "mongoose"
+
+export interface ProductReqDTO {
+    name: string
+    type: string
+    productDetails: ProductDetails[]
+}
+
+export interface ProductDetails {
+    loanTerm: number
+    interestRate: number 
+}
